aws-depl/nginx-nodeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2  # Ensures 2 Pods are running
  selector:
    matchLabels:
      app: nginx  # Deployment manages Pods with this label
  template:
    metadata:
      labels:
        app: nginx  # Pods will have this label
    spec:
      containers:
        - name: nginx
          image: nginx  # Official Nginx image from Docker Hub
          ports:
            - containerPort: 80  # Nginx serves on port 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
spec:
  type: NodePort  # Exposes service externally on a NodePort
  ports:
    - targetPort: 80  # The port inside the Pod
      nodePort: 30080  # External port on each node
      port: 80  # Service's internal port
      protocol: TCP
  selector:
    app: nginx  # Matches Pods with 'app: nginx' label
