aws-depl/ingress-depl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "nginx-ingress-me"
  namespace: "nginx-ingress-me"
  labels:
    app: 2048-nginx-ingress
spec:
  ingressClassName: alb
  rules:
    - host: $host-domain
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: "service-2048"
                port:
                  number: 80
